Solucionados probelmas ya solucionados anteriormente en las clases GestorClientes y GestorPedidos